# pidashcam

./: .gitignore  .pdm-python  .pre-commit-config.yaml  .python-version  .travis.yml  INSTALL.md  INSTALL.rst  LICENSE  MANIFEST.in  README.md  README.rst  TODO.rst  cam_test.py  cameraStreamBash.py  capture.py  fps_demo.py  pidashcam.py  pyproject.toml  requirements.txt  run_cam.py  setup.cfg  setup.py  test2.py  updated_cam.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml  template-sync.yml
.github/workflows/: CI.yml  main.yml  schedule-update-actions.yml  sematic-pr-check.yml  sphinx.yml  template-sync.yml
code/: .gitignore
code/pidashcam/: setup.py
code/pidashcam/default/: README.txt  pidashcam
code/pidashcam/init.d/: README.txt  pidashcam
code/pidashcam/pidashcam/: pidashcam
code/pidashcam/scripts/: pidashcam  pidashcam.py
code/pidashcam/systemd/: pidashcam.service
code/tests/: testgps2.py  testgps3.py
code/tests/UPSPIco/: powerfail.py
code/tests/systemd/: code.py  code1.py
default/: pidashcam
pidashcam/: __init__.py  camerathread.py  gpspoller.py  myqueue.py  pidashcam.py  upspico.py
pidashcam/tests/: test_gps.py
scripts/: TODO.md  pi-dashcam  pidashcam
scripts/tests/: cameraStreamBash.py
src/pidashcam/: __init__.py  camerathread.py  config.py  gpspoller.py  myqueue.py  pidashcam.py  ringBuffer.py  ringbuffer.py  upspico.py
src/pidashcam.egg-info/: PKG-INFO  SOURCES.txt
src/pidashcam/tests/: test_test.py
systemd/: pidashcam.service
temp/: test3.py  updated_cam.py
temp/pidashcam/: __init__.py  config.py  gpspoller.py  pidashcam.py
tests/: #test_RingBuffer.py  class1.py  conftest.py  keyboardTest.py  powerfail.py  simpleCapture.py  startPythonStream.sh  test_Camera.py  test_PiDashCam.py  test_gpspoller.py  test_myQueue.py  testgps.py
tests/systemd/: code1.py
