[build-system]
requires = [
"build",
"flit_core >=3.11,<4",
"keyboard",
"opencv-contrib-python"
]
build-backend = "flit_core.buildapi"

[project]
name = "pidashcam"
authors = [{name = "Gareth Howell", email = "gareth.howell@gmail.com"}]
readme = "README.rst"
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version", "description"]
requires_python=~3.9
keywords="dashcam","surveillance"
classifiers= [
  "Development Status :: 2 - Pre-Alpha",
  "Private :: Do Not Upload"
]

[project.urls]
Home = "https://github.com/garethhowell/pidashcam"
