[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "pidashcam"
authors = [
    {name = "Gareth Howell", email = "gareth.howell@gmail.com"},
]
readme = "README.md"
license = {text = "MIT"}
license-files = ["LICENSE"]
dynamic = ["version", "description"]
requires-python = ">=3.9"
keywords = [ "dashcam", "surveillance" ]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Private :: Do Not Upload"
]
version = "0.1.0"
description = "A Raspberry Pi based dashcam"
dependencies = [
    "keyboard",
    "gps",
    "numpy",
    "opencv-contrib-python",
    "RPi-GPIO",
]

[project.urls]
Home = "https://github.com/garethhowell/pidashcam"

[tool.pdm]
distribution = true
