[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "pidashcam"
authors = [
    {name = "Gareth Howell", email = "gareth.howell@gmail.com"},
]
readme = "README.rst"
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version", "description"]
requires-python = ">=3.12"
keywords = [ "dashcam", "surveillance" ]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Private :: Do Not Upload"
]
dependencies = [
    "keyboard",
    "gps",
    "numpy",
    "opencv-contrib-python",
    "RPi-GPIO",
]

[project.urls]
Home = "https://github.com/garethhowell/pidashcam"

[tool.pdm]
distribution = true
